fix(a11y): fixed contrasts, aria-labels, and labels

--- a/src/components/BlogCard/BlogCard.scss
+++ b/src/components/BlogCard/BlogCard.scss
@@ -31,7 +31,7 @@
     padding: 0.25rem;
 
     span, a {
-      color: var(--color-text-secondary);
+      color: var(--color-text-high-contrast);
       font-size: var(--font-size-body3);
       padding: 0.125rem 0.5rem;
 
