--- a/src/containers/AuthorList/AuthorList.scss
+++ b/src/containers/AuthorList/AuthorList.scss
@@ -22,5 +22,6 @@
     font-weight: normal;
     margin: 0.5rem 0.5rem 0.5rem 0;
     width: 100%;
+    color: var(--color-text-secondary);
   }
 }
